--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <!-- Provisión del archivo manifest.json que sirve para configurar los ajustes de la pestaña del Browser del Comercio Electrónico. -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Título de la Pestaña del Browser del Comercio Electrónico. -->
-    <title>MAD Shop</title>
+    <title>MADe</title>
   </head>
   <!-- Contenido del Comercio Electrónico. -->
-  <body id="mainMADshop"></body>
+  <body id="mainMADenterprise"></body>
 </html>
